added fastcgi_hide_header in nginx.conf

--- a/resolver/nginx/nginx.conf
+++ b/resolver/nginx/nginx.conf
@@ -10,5 +10,6 @@ server {
         fastcgi_param           PATH_INFO $fastcgi_path_info;
         fastcgi_index           index.php;
         fastcgi_pass            resolver:31337;
+	fastcgi_hide_header     X-Powered-By;
     }
 }
